--- a/style/contactSyle.css
+++ b/style/contactSyle.css
@@ -83,7 +83,7 @@ a {
 }
 
 #contact .navbar .menu li .dropdown {
-  display: none;
+  /* display: none; */
   position: absolute;
   background-color: white;
   width: 250px;
@@ -92,9 +92,17 @@ a {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    transform-origin: top;
+    transform: scaleY(0);
+    visibility: hidden;
+    opacity: 0;
+
 }
 #contact .navbar .menu > li:hover .dropdown {
-  display: block;
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+  transition: all 0.3s ease;
 }
 #contact .navbar .menu li .dropdown li {
   position: relative;
@@ -114,7 +122,7 @@ a {
   color: #06163a;
 }
 #contact .navbar .menu li .dropdown li .dropdown2 {
-  display: none;
+  /* display: none; */
   position: absolute;
   left: 100%;
   top: -10%;
@@ -123,9 +131,16 @@ a {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    transform-origin: left;
+    transform: scaleX(0);
+    visibility: hidden;
+    opacity: 0;
 }
 #contact .navbar .menu li .dropdown li:hover .dropdown2 {
-  display: block;
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+  transition: all 0.3s ease;
 }
 #contact .navbar .menu li .dropdown li:hover i {
   rotate: -90deg;
